# streamlit_elements_practice

./: app.py  practice_data.csv  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
pages/: CalenderCreation.py  Calibration.py  Flows.py  Fuels.py  Generation.py  Home.py  LoadFactor.py  PriceFundamental.py  ScenarioDistribution.py  SubmitRuns.py  WeatherPaths.py  app.py  config.json  style.css
server/: Main.py
tests/unit/: test_calender.py  test_calibration.py  test_flow.py  test_fuel.py  test_generation.py  test_home.py  test_loadfactor.py  test_main.py  test_price_fundamental.py  test_submit.py
